# Enterprise_rag

./: .dockerignore  .gitignore  README.md  a.txt  docker-compose.yml  pyproject.toml
app/: Dockerfile.backend  config.py
app/Guardrails/: __init__.py  colang_rules.py  rails.py
app/agents/: graph.py  state.py
app/agents/nodes/: planner.py  responder.py  retriever.py
app/gateway/: client.py
app/ingestion/: processor.py
app/ingestion/chunking/: splitter.py
app/ingestion/loaders/: html.py  office.py
app/services/retreival/: embeddings.py  qdrant_service.py  ranking_service.py
evals/: metrics.py  pipeline.py
processed_data/true/: architecture.pptx.json  cronjobs.docx.json  job_management.html.json  monitor_job.docx.json  parallel_work_queue.txt.json  pods_autoscale.html.json
ui/: Dockerfile.frontend  app.py
