[project]
name = "enterprise-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "deepeval>=4.0.7",
    "deepteam>=1.0.7",
    "docx>=0.2.4",
    "fastapi>=0.139.0",
    "flashrank>=0.2.10",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-experimental>=0.4.2",
    "langchain-google-genai>=4.2.7",
    "langchain-google-vertexai>=3.2.4",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-nvidia-ai-endpoints>=1.4.3",
    "langchain-openai>=1.3.3",
    "langfuse>=4.13.1",
    "langgraph>=1.2.8",
    "langsmith>=0.9.8",
    "logfire[fastapi,requests,system-metrics]>=4.37.0",
    "loguru>=0.7.3",
    "nemoguardrails>=0.23.0",
    "nest-asyncio>=1.6.0",
    "numpy>=2.5.1",
    "pdfplumber>=0.11.10",
    "portkey-ai>=2.3.2",
    "pydantic>=2.0.0",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-pptx>=1.0.2",
    "pytz>=2026.2",
    "qdrant-client>=1.18.0",
    "ragas>=0.3.1",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.59.0",
    "uvicorn[standard]>=0.50.2",
]
